# libsteady

./: .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  linkedlist.c  linkedlist.h
tests/: Makefile.am  test_linkedlist.c  tests.c
